# phasorsyncrs

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  REWRITE_CONTEXT.md  backupclippy  common.mk  current_debt.md  refactorings.md  rustfmt.toml
.github/workflows/: main.yml  rust.yml
docs/: developer-workflow.md  logging-and-construction.md  migration_report.md  music_theory_layer.md  product_vision.md  refactor.md  release_plan.md
docs/adr/: adr00_guiding_principles.md  adr01_tdd_and_unit_size_structure.md  adr02_midi_library_selection.md  adr03_structure_concurrency_and_instantiation.md  adr04_midi_message_abstraction.md
src/: clock.rs  config.rs  event_loop.rs  external_clock.rs  lib.rs  logging.rs  main.rs  midi.rs  midi_output.rs  musical_graph.rs  scheduler.rs  state.rs  transport.rs  tui.rs  ui.rs
src/cli/: args.rs  mod.rs
src/midi/: alsa.rs  clock.rs  engine.rs  external_clock.rs  internal_clock.rs  internal_engine.rs  midir_engine.rs  mock_engine.rs  mod.rs
src/midi/clock/: core.rs  mod.rs
src/transport/: input.rs  mod.rs  timing.rs
src/tui/: input.rs
src/ui/: inspector.rs  mod.rs  progress.rs
tests/: cli_tests.rs  event_loop_integration_test.rs  midi_engine_tests.rs  midi_tests.rs  scheduler_tests.rs  state_tests.rs  ui_tests.rs
