[package]
name = "phasorsyncrs"
version = "0.1.0"
edition = "2021"

[features]
test-mock = [] # Feature flag for using mock implementations in tests

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
config = "0.13"
midir = "0.9"
crossbeam = "0.8"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
